made changes to website

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 .blue {
-	color: #32C2C2;
+	color: #001111;
 }
 
 .empty-space {
@@ -24,11 +24,11 @@ html, body {
 .blue-hyperlink {
 	font-weight: bold;
 	text-decoration: none;
-	color: #41BFA8;
+	color: #000101;
 }
 
 .blue-hyperlink:hover {
-	color: #84D98A;
+	color: #000000;
 }
 
 .hex-general {
@@ -192,7 +192,7 @@ html, body {
 
 .blog-btn a {
 	text-decoration: none;
-	color: white;
+	color: rgb(0, 0, 0);
 }
 
 .hexLeftBlog {
@@ -210,7 +210,7 @@ html, body {
 
 /******************************** CONTACT US *************************************/
 #contact-image{
-	background-image: url('../assets/img/map.jpg');
+	background-image: url('https://t4.ftcdn.net/jpg/04/99/22/13/240_F_499221383_kloBwzLeQ21or4AfVUBYUrwR3RXrMovc.jpg');
 	background-size: cover;
 	background-repeat:no-repeat;
 	padding: 3rem 0;
@@ -324,7 +324,7 @@ html, body {
 
 /******************************** FOOTER *************************************/
 #footer {
-	background-color: #1A7D88;
+	background-color: #fcfcfc;
 	color: white;
 	padding: 2rem 0;
 }
@@ -382,7 +382,7 @@ html, body {
 	/************** HEADER / NAVBAR *************/
 	.banner {
 		font-family: 'Times New Roman', Times, serif;
-		color: white;
+		color: rgb(0, 0, 0);
 		margin-top: 5px;
 		margin-bottom: 20px;
 	}
@@ -396,13 +396,13 @@ html, body {
 	}
 
 	.navbar-menu a {
-		color: white !important;
+		color: rgb(0, 0, 0) !important;
 		font-family: 'Roboto', sans-serif;
 		font-size: 48px;
 	}
 
 	#logo {
-		width: 40%;
+		width: 60%;
 		margin-top: 0.3rem;
 	}
 
@@ -544,6 +544,7 @@ html, body {
 	}
 
 	.haelu-social {
+		color: #283d50;
 		margin: 0 10% 0 2.5%;
 	}
 
@@ -668,7 +669,7 @@ html, body {
 
 	/************* NAVBAR / HEADER *************/
 	.navbar-menu a {
-		color: white !important;
+		color: rgb(0, 0, 0) !important;
 		font-family: 'Roboto', sans-serif;
 		font-size: 15px;
 		margin-left: 1rem;
@@ -773,6 +774,64 @@ html, body {
 		font-size: 1rem;
 	}
     /******************************** END-MEET THE TEAM *************************************/
+
+	/********************************  MEET OUR CLIENTS SECTION *************************************/
+
+
+	.section-header h3 {
+		font-size: 36px;
+		color: #283d50;
+		text-align: center;
+		font-weight: 500;
+		position: relative;
+	}
+	
+	.section-header p {
+		text-align: center;
+		margin: auto;
+		font-size: 15px;
+		padding-bottom: 60px;
+		color: #556877;
+		width: 50%;
+	}
+	
+	#clients {
+		padding: 60px 0;
+		
+	}
+	#clients .clients-wrap {
+		border-top: 1px solid #d6eaff;
+		border-left: 1px solid #d6eaff;
+		margin-bottom: 30px;
+	}
+	
+	#clients .client-logo {
+		padding: 64px;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-pack: center;
+		-webkit-justify-content: center;
+		-ms-flex-pack: center;
+		justify-content: center;
+		-webkit-box-align: center;
+		-webkit-align-items: center;
+		-ms-flex-align: center;
+		align-items: center;
+		border-right: 1px solid #d6eaff;
+		border-bottom: 1px solid #d6eaff;
+		overflow: hidden;
+		background: #fff;
+		height: 160px;
+	}
+	
+	#clients img {
+		transition: all 0.4s ease-in-out;
+	}
+	 
+
+	/********************************  END MEET OUR CLIENTS SECTION *************************************/
 
     /******************************** BLOG *************************************/
 	#blog-row {
